Implement code changes to enhance functionality and improve performance

--- a/03 Patterns in neural activity/patterns_in_neural_population_actovity.ipynb
+++ b/03 Patterns in neural activity/patterns_in_neural_population_actovity.ipynb
@@ -5,7 +5,7 @@
    "id": "8af877be",
    "metadata": {},
    "source": [
-    "# Identifying Patterns and Hidden Structure in Neural Population Activity\n",
+    "# Identifying patterns and hidden structure in neural population activity\n",
     "\n",
     "In this final part of the course, our focus shifts to **exploratory data analysis** of the **neural activity traces** we have extracted so far. The core objective is to uncover structure and potential patterns within the ensemble activity — either by relating it to available behavioral data, or by analyzing the organization and co-activity of individual neurons relative to the overall population.\n",
     "The methods demonstrated here are foundational tools in modern neuroscience for understanding how neuronal ensembles encode, process, or respond to experimental variables and internal states.\n",
@@ -74,7 +74,7 @@
    "id": "184d0bfd",
    "metadata": {},
    "source": [
-    "This array, `spike_probs`, has the shape (`n_neurons`, `n_timepoints`), with each row representing the activity of a single neuron across the recording session:\n",
+    "The array, `spike_probs`, has the shape (`n_neurons`, `n_timepoints`), with each row representing the activity of a single neuron across the recording session:\n",
     "\n",
     "Let's inspect a single trace to see how it looks like:"
    ]
@@ -201,7 +201,7 @@
     "# plot the same plot as above, but no binned for every N seconds\n",
     "bin_size = 0.75  # in sec - please change this to your desired bin size\n",
     "\n",
-    "# convert bin size to number of frames:\n",
+    "\n",
     "bin_size_frames = int(bin_size * frame_rate)  # convert to number of frames\n",
     "# bin the spike probabilities:\n",
     "spike_probs_binned = spike_probs[:, ::bin_size_frames]\n",
@@ -379,13 +379,12 @@
     }
    ],
    "source": [
-    "\n",
     "from scipy.stats import pearsonr\n",
     "\n",
     "window_size = 100  # e.g., 100 time points (frames)\n",
     "half_window = window_size // 2\n",
     "\n",
-    "# Prepare the output array (NaN for positions where window would run out of bounds)\n",
+    "# prepare the output array (NaN for positions where window would run out of bounds)\n",
     "correlation_trace = np.full(len(spike_probs_sum_smoothed), np.nan)\n",
     "\n",
     "spike_probs_no_nan = np.nan_to_num(spike_probs, nan=0.0)  # Replace NaNs with 0 for correlation calculation\n",
@@ -403,8 +402,7 @@
     "\n",
     "# also calculate the overall correlation\n",
     "overall_correlation = pearsonr(population_activity, speed_vec)[0]\n",
-    "print(f'Overall correlation between population activity and speed: {overall_correlation:.2f}')\n",
-    "\n"
+    "print(f'Overall correlation between population activity and speed: {overall_correlation:.2f}')"
    ]
   },
   {
@@ -495,13 +493,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "id": "e67492e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check the correlation between the activity of each neuron and the speed vector \n",
-    "# using a sliding window approach:\n",
+    "# check the correlation between the activity of each neuron and the population \n",
+    "# activity vector using a sliding window approach:\n",
     "window_size = 100  # number of frames per window\n",
     "step = 1  # sliding step size\n",
     "num_neurons, num_frames = spike_probs.shape\n",
@@ -511,7 +509,7 @@
     "    for t in range(num_frames - window_size + 1):\n",
     "        x = spike_probs[neuron, t:t+window_size]\n",
     "        y = spike_probs_sum_smoothed[t:t+window_size]\n",
-    "        # Handle constant window (zero std): correlation undefined, set to np.nan\n",
+    "        # handle constant window (zero std): correlation undefined, set to np.nan\n",
     "        if np.std(x) < 1e-10 or np.std(y) < 1e-10:\n",
     "            corr_matrix[neuron, t] = np.nan\n",
     "        else:\n",
@@ -556,7 +554,7 @@
    "id": "402efada",
    "metadata": {},
    "source": [
-    "Interpreting the resulting correlation matrix:\n",
+    "**Interpreting the resulting correlation matrix:**\n",
     "\n",
     "* The resulting **correlation matrix** (visualized as a heatmap) reveals complex, time-varying relationships between each neuron and the population state.\n",
     "* **Bright red** (positive correlation) indicates periods when a neuron’s activity rises and falls in concert with the overall network.\n",
@@ -694,7 +692,7 @@
     "* **Bottom rows**: Neurons less involved in, or even opposed to, the dominant population dynamics.\n",
     "* This ordering can uncover \"core\" and \"peripheral\" neurons in the functional population, as well as potential sub-populations with specialized roles.\n",
     "\n",
-    "Sorting neurons by their correlation with the smoothed population activity provides an efficient way to detect and visualize functional hierarchies, assemblies, or gradients within the recorded network. It is a key exploratory tool in population neuroscience, particularly when linking single-cell and collective dynamics.\n"
+    "Sorting neurons by their correlation with the smoothed population activity provides an efficient way to detect and visualize functional hierarchies, assemblies, or gradients within the recorded network. It is a key exploratory tool in population neuroscience, particularly when linking single-cell and collective dynamics."
    ]
   },
   {
@@ -714,8 +712,7 @@
     "* Reveal lags or leads between neural and behavioral signals, supporting causal or predictive modeling.\n",
     "* Compare the structure of neural population activity with the external world, going beyond purely intrinsic network dynamics.\n",
     "\n",
-    "**Perspective:**  \n",
-    "The ability to flexibly align and correlate neural data with both population and behavioral signals is essential for modern systems neuroscience. It enables the transition from descriptive network analysis toward mechanistic insights into neural coding and computation. As an immediate next step, students are encouraged to integrate real behavioral vectors (when available) into this framework, repeating the analyses and comparing the organization and engagement of the network under different behavioral or experimental conditions.\n",
+    "**Perspective:** The ability to flexibly align and correlate neural data with both population and behavioral signals is essential for modern systems neuroscience. It enables the transition from descriptive network analysis toward mechanistic insights into neural coding and computation. As an immediate next step, students are encouraged to integrate real behavioral vectors (when available) into this framework, repeating the analyses and comparing the organization and engagement of the network under different behavioral or experimental conditions.\n",
     "\n",
     "\n",
     "**In summary**, the analysis methods introduced here form a foundation for exploratory and hypothesis-driven studies in functional imaging data, providing robust strategies for linking cellular activity, population dynamics, and behavior."
@@ -739,6 +736,12 @@
     "\n",
     "While the present example uses a toy (simulated) behavior vector for demonstration purposes, the workflow provides a direct template for integrating genuine behavioral data into neural population analyses. This flexibility is essential for understanding the neural basis of behavior and for extending your analyses to more complex, hypothesis-driven experiments."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0aaf219",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
