Implement code changes to enhance functionality and improve performance

--- a/02 Cascade tutorial/Calibrated_spike_inference_with_Cascade.ipynb
+++ b/02 Cascade tutorial/Calibrated_spike_inference_with_Cascade.ipynb
@@ -10,6 +10,10 @@
         "\n",
         "**CASCADE**, short for Calibrated spike inference from calcium imaging data using deep networks, is an open-source, deep learning-based pipeline for inferring neuronal spike trains from calcium imaging data. It provides robust and calibrated spike inference by leveraging ground truth datasets and convolutional neural networks, enabling the reconstruction of neuronal spiking activity from noisy or slow calcium fluorescence signals.  \n",
         "\n",
+        "![gif](images/CA1_deconvolution_CASCADE.gif \"CASCADE translates calcium imaging ΔF/F traces into spiking probabilities or discrete spikes.\")\n",
+        "**Figure 1:** CASCADE translates calcium imaging $\\Delta F/F$ traces into spiking probabilities or discrete spikes. Source: [CASCADE GitHub repository](https://github.com/HelmchenLabSoftware/Cascade/tree/master) (license: MIT License)\n",
+        "\n",
+        "\n",
         "CASCADE operates by first training on large-scale ground truth data, then applying a pre-trained or custom model to new experimental calcium traces, thereby generating probabilistic or discrete spike estimates.  \n",
         "\n",
         "The approach is particularly valuable for neuroscience experiments where direct electrophysiological recordings are impractical, and offers a standardized, reproducible method for analyzing large calcium imaging datasets.\n",
@@ -105,6 +109,38 @@
         "        print(\"Cascade directory already exists.\")\n",
         "    os.chdir('Cascade')\n",
         "    print(f\"Changed directory to {os.getcwd()}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Relation between action potentials and Calcium transients\n",
+        "The **action potential** is the fundamental electrical event that enables neurons to communicate. It is a brief, stereotyped change in the membrane potential, initiated when the neuron's membrane is depolarized beyond a specific voltage **threshold** by synaptic input or external stimulation.\n",
+        "\n",
+        "![img](images/action_potential2.png \"The phases of an Action Potential.\")\n",
+        "**Figure 2:** Stages of an action potential. Source: [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Action_potential.svg){{site.data.scuts.extlink}} (license: CC BY-SA 3.0; modified)\n",
+        "\n",
+        "\n",
+        "**Phases of the Action Potential:**\n",
+        "* **Depolarization:**\n",
+        "  Upon reaching threshold, voltage-gated **sodium (Na⁺) channels** open rapidly. The resulting influx of Na⁺ ions drives the membrane potential sharply upward, away from its resting value (typically −60 to −70 mV).\n",
+        "* **Repolarization:**\n",
+        "  Shortly after, sodium channels inactivate and voltage-gated **potassium (K⁺) channels** open, allowing K⁺ ions to exit the cell. This causes the membrane potential to return toward the resting level.\n",
+        "* **Hyperpolarization:**\n",
+        "  Because potassium channels close slowly, there is a transient **overshoot**—the membrane potential becomes more negative than the resting value. This is the **afterhyperpolarization**.\n",
+        "\n",
+        "During an action potential, two key refractory periods occur:\n",
+        "* The **absolute refractory period**—when no new action potential can be initiated, regardless of stimulus strength—extends from the start of depolarization to the end of repolarization.\n",
+        "* The **relative refractory period**—during the hyperpolarization phase—requires a stronger stimulus to evoke another action potential.\n",
+        "\n",
+        "**Calcium Entry and Transients:**  \n",
+        "While sodium and potassium ions underlie the electrical action potential, the critical link to calcium imaging arises from the **opening of voltage-gated calcium (Ca²⁺) channels**. These channels are activated primarily during the depolarization and early repolarization phases, particularly at axon terminals and some somatic/dendritic sites. The resulting **influx of Ca²⁺ ions** leads to a transient rise in intracellular calcium concentration—known as a **calcium transient**.\n",
+        "\n",
+        "* The **shape** and **amplitude** of the calcium transient are determined by the number and timing of action potentials, the types and distribution of calcium channels, cellular buffering mechanisms, and calcium extrusion pumps.\n",
+        "* **Calcium indicators** used in imaging bind to intracellular Ca²⁺ and report its concentration via fluorescence changes. Thus, **calcium imaging does not measure action potentials directly**, but instead reports the secondary, slower, and often temporally blurred changes in calcium concentration.\n",
+        "\n",
+        "This biophysical relationship defines the analytical challenge: **action potentials are brief and all-or-none, while calcium signals are slower, cumulative, and subject to indicator kinetics and noise**. Accurate interpretation and inference therefore require an understanding of both the electrical and biochemical processes linking action potentials to the observed calcium fluorescence."
       ]
     },
     {
