Fix citation formatting for action potential figure in Cascade tutorial notebook

--- a/02 Cascade tutorial/Calibrated_spike_inference_with_Cascade.ipynb
+++ b/02 Cascade tutorial/Calibrated_spike_inference_with_Cascade.ipynb
@@ -119,8 +119,7 @@
         "The **action potential** is the fundamental electrical event that enables neurons to communicate. It is a brief, stereotyped change in the membrane potential, initiated when the neuron's membrane is depolarized beyond a specific voltage **threshold** by synaptic input or external stimulation.\n",
         "\n",
         "![img](images/action_potential2.png \"The phases of an Action Potential.\")\n",
-        "**Figure 2:** Stages of an action potential. Source: [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Action_potential.svg){{site.data.scuts.extlink}} (license: CC BY-SA 3.0; modified)\n",
-        "\n",
+        "**Figure 2:** Stages of an action potential. Source: [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Action_potential.svg) (license: CC BY-SA 3.0; modified)\n",
         "\n",
         "**Phases of the Action Potential:**\n",
         "* **Depolarization:**\n",
