Refine explanation of action potentials and calcium transients, enhancing clarity and detail on their relationship and implications for calcium imaging analysis.

--- a/02 Cascade tutorial/Calibrated_spike_inference_with_Cascade.ipynb
+++ b/02 Cascade tutorial/Calibrated_spike_inference_with_Cascade.ipynb
@@ -115,31 +115,62 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Relation between action potentials and Calcium transients\n",
-        "The **action potential** is the fundamental electrical event that enables neurons to communicate. It is a brief, stereotyped change in the membrane potential, initiated when the neuron's membrane is depolarized beyond a specific voltage **threshold** by synaptic input or external stimulation.\n",
+        "## Relation between action potentials and calcium transients\n",
+        "The **action potential** is the fundamental electrical event by which neurons communicate. It is a brief, stereotyped change in membrane potential, initiated when synaptic input or external stimulation depolarizes the membrane beyond a threshold.\n",
         "\n",
         "![img](images/action_potential2.png \"The phases of an Action Potential.\")\n",
         "**Figure 2:** Stages of an action potential. Source: [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Action_potential.svg) (license: CC BY-SA 3.0; modified)\n",
         "\n",
-        "**Phases of the Action Potential:**\n",
-        "* **Depolarization:**\n",
-        "  Upon reaching threshold, voltage-gated **sodium (Na⁺) channels** open rapidly. The resulting influx of Na⁺ ions drives the membrane potential sharply upward, away from its resting value (typically −60 to −70 mV).\n",
-        "* **Repolarization:**\n",
-        "  Shortly after, sodium channels inactivate and voltage-gated **potassium (K⁺) channels** open, allowing K⁺ ions to exit the cell. This causes the membrane potential to return toward the resting level.\n",
-        "* **Hyperpolarization:**\n",
-        "  Because potassium channels close slowly, there is a transient **overshoot**—the membrane potential becomes more negative than the resting value. This is the **afterhyperpolarization**.\n",
+        "**Phases of the action potential:**\n",
         "\n",
-        "During an action potential, two key refractory periods occur:\n",
-        "* The **absolute refractory period**—when no new action potential can be initiated, regardless of stimulus strength—extends from the start of depolarization to the end of repolarization.\n",
-        "* The **relative refractory period**—during the hyperpolarization phase—requires a stronger stimulus to evoke another action potential.\n",
+        "* **Depolarization:** Voltage-gated sodium (Na⁺) channels open, allowing Na⁺ influx and a rapid rise of the membrane potential (from typically −70 mV to +30 mV).\n",
+        "* **Repolarization:** Sodium channels inactivate; voltage-gated potassium (K⁺) channels open, K⁺ exits the cell, and the membrane potential falls back.\n",
+        "* **Hyperpolarization:** As K⁺ channels close slowly, the membrane potential briefly undershoots its resting value.\n",
         "\n",
-        "**Calcium Entry and Transients:**  \n",
-        "While sodium and potassium ions underlie the electrical action potential, the critical link to calcium imaging arises from the **opening of voltage-gated calcium (Ca²⁺) channels**. These channels are activated primarily during the depolarization and early repolarization phases, particularly at axon terminals and some somatic/dendritic sites. The resulting **influx of Ca²⁺ ions** leads to a transient rise in intracellular calcium concentration—known as a **calcium transient**.\n",
+        "The entire electrical event lasts **\\~1–2 milliseconds**. However, a key link to functional imaging comes from **voltage-gated calcium (Ca²⁺) channels**, which open during the depolarization (and sometimes early repolarization) phase — most notably at axon terminals and in certain somatic/dendritic compartments. This results in a **brief but significant influx of Ca²⁺ ions** into the neuron.\n",
         "\n",
-        "* The **shape** and **amplitude** of the calcium transient are determined by the number and timing of action potentials, the types and distribution of calcium channels, cellular buffering mechanisms, and calcium extrusion pumps.\n",
-        "* **Calcium indicators** used in imaging bind to intracellular Ca²⁺ and report its concentration via fluorescence changes. Thus, **calcium imaging does not measure action potentials directly**, but instead reports the secondary, slower, and often temporally blurred changes in calcium concentration.\n",
+        "**Calcium transient:**  \n",
         "\n",
-        "This biophysical relationship defines the analytical challenge: **action potentials are brief and all-or-none, while calcium signals are slower, cumulative, and subject to indicator kinetics and noise**. Accurate interpretation and inference therefore require an understanding of both the electrical and biochemical processes linking action potentials to the observed calcium fluorescence."
+        "The influx of Ca²⁺ produces a **transient rise in intracellular calcium concentration**. The amplitude and time course of this transient depend on:\n",
+        "\n",
+        "* The number and timing of action potentials.\n",
+        "* The local density and subtype of Ca²⁺ channels.\n",
+        "* Cellular buffering, extrusion mechanisms, and compartment geometry.\n",
+        "\n",
+        "**Temporal relationship:**\n",
+        "\n",
+        "* **Action potential:** Rapid (**1–2 ms**, all-or-none, digital signal).\n",
+        "* **Ca²⁺ transient:** Slower (**10–100 ms or more**), reflecting biological Ca²⁺ handling.\n",
+        "* **Measured fluorescence:** Even slower, because the optical signal reflects both the underlying Ca²⁺ dynamics and the **kinetics of the chosen indicator** (e.g., GCaMP variants, OGB-1, Fluo-4).\n",
+        "\n",
+        "**Why do indicator kinetics matter?**\n",
+        "\n",
+        "* **Fast indicators** (e.g., GCaMP6f) have rapid binding/unbinding and better temporal fidelity, but may have lower signal amplitude.\n",
+        "* **Slow indicators** (e.g., GCaMP6s) bind Ca²⁺ for longer, producing larger, longer-lasting signals but greater temporal blurring.\n",
+        "* The **recorded fluorescence trace** is thus a **convolution** of the cell's true Ca²⁺ dynamics and the indicator's own response, resulting in a signal that rises and decays much more slowly than the action potential that triggered it.\n",
+        "\n",
+        "**Does the fluorescence decay match the true Ca²⁺ decay?**\n",
+        "\n",
+        "* **Not exactly.** The decay time of the recorded signal is generally longer than the underlying Ca²⁺ transient because it includes both **biological clearance** and **indicator off-kinetics**.\n",
+        "* For this reason, fast and slow indicators exist: to balance **sensitivity** against **temporal resolution**, depending on experimental goals.\n",
+        "\n",
+        "**Summary table:**\n",
+        "\n",
+        "| Event | Typical time course | Notes |\n",
+        "| ----------- | ------------ | ------ |\n",
+        "| Action potential | **1–2 ms** | Electrical event (Na⁺/K⁺ channels)       |\n",
+        "| Ca²⁺ influx & clearance         | **10–100 ms** (rise/decay)   | Biological, varies with cell/compartment |\n",
+        "| Indicator fluorescence response | **50 ms – 1 s** (rise/decay) | Convolution of Ca²⁺ + indicator kinetics |\n",
+        "\n",
+        "**Analytical implication:**  \n",
+        "\n",
+        "Calcium imaging does **not** measure action potentials directly, but a **filtered, noisy, and temporally blurred proxy**—the fluorescence signal of the indicator bound to Ca²⁺. The lack of strict one-to-one correspondence means:\n",
+        "\n",
+        "* **Not every spike produces a clearly separable calcium transient** (especially at high firing rates or with slow indicators).\n",
+        "* **Some calcium transients represent the cumulative effect of multiple spikes.**\n",
+        "* **Noise, baseline drift, and kinetics** can obscure single events.\n",
+        "\n",
+        "This biophysical chain underlies the need for careful **spike inference algorithms**: reconstructing the underlying spike train from the slow, convolved, and noisy optical signal, given known indicator properties and the basic principles of cellular calcium dynamics.\n"
       ]
     },
     {
